# c-GameDev

./: CMakeLists.txt  README.md  notes.md
include/: Action.hpp  ActionMap.hpp  ActionMap.tpl  ActionTarget.hpp  ActionTarget.tpl  Configuration.hpp  Enemy.hpp  Entity.hpp  Game.hpp  Meteor.hpp  Player.hpp  Player.tpl  ResourceManager.hpp  ResourceManager.tpl  Saucer.hpp  Shoot.hpp  World.hpp
later/: Action.cpp  Action.hpp  ActionMap.hpp  ActionMap.tpl  ActionTarget.hpp  ActionTarget.tpl  Game.cpp  Game.hpp  Player.cpp  Player.hpp  main.cpp
src/: Action.cpp  Collision.cpp  Configuration.cpp  Enemy.cpp  Entity.cpp  Meteor.cpp  Saucer.cpp  Shoot.cpp  World.cpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
